tests/ui/type-alias-impl-trait/implied_lifetime_wf_check3.stderr
error: lifetime may not live long enough
  --> $DIR/implied_lifetime_wf_check3.rs:14:46
   |
LL |     fn test<'a>() where for<'b> Ty<'b>: 'a { assert_static::<'a>() }
   |             -- lifetime `'a` defined here    ^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/implied_lifetime_wf_check3.rs:20:21
   |
LL |     fn test<'a>() { assert_static::<'a>() }
   |             --      ^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |             |
   |             lifetime `'a` defined here

error: aborting due to 2 previous errors

